--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lista de Cursos de devOps da Alura</title>
+    <title>Lista de cursos de devOps da Alura</title>
 </head>
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker: Criando container sem dor de cabeça</li>
+        <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Contínua: e mais algumas palavras dificeis</li>
     </ul>
