--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Docker alguma coisa dor de cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua: e mais algumas palavras dificeis</li>
         <li>Kubernetes</li>
