--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant</li>
         <li>Docker alguma coisa dor de cabeça</li>
-        <li>Ansible vamos ohiihi</li>
+        <li>Ansible</li>
         <li>Integração Contínua: e mais algumas palavras dificeis</li>
         <li>Kubernetes</li>
     </ul>
