--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Docker alguma coisa dor de cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua: e mais algumas palavras dificeis</li>
-        <li>Kubernetes</li>
+        <li>Kubernetes habalalala dubidubu</li>
     </ul>
 </body>
 </html>
